# Nyx-OS

./: .env.example  .env.local.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  ROADMAP.md  TODO.md  package-lock.json  package.json  pyproject.toml
.ai/: nyx_os_architecture.md  protocol.md
.ai/context/: README.md
.ai/prompts/: sprint-01-captura-rapida.md
.github/workflows/: ci.yml
apps/: README.md
apps/web/: .env.local.example  README.md  eslint.config.mjs  jest.config.js  next.config.mjs  package.json  tsconfig.json
assets/: README.md
configs/: README.md
docker/: README.md
docs/: README.md  first-boot.md
docs/arquitetura/: ai-runtime.md  apis.md  automation-engine.md  capability-engine.md  context-engine.md  core-runtime.md  dev-dashboard.md  event-bus.md  fundacao-tecnica.md  knowledge-engine.md  local-communication-foundation.md  logging.md  memory-engine.md  modelo-de-dados.md  nyx-interaction-layer.md  nyx-local.md  personal-data-modules.md  plugin-framework.md  prompt-engine.md  scheduler.md  tool-calling-engine.md  visao-geral.md  workflow-engine.md
docs/decisoes/: ADR-0001-fonte-da-verdade.md  ADR-0002-modularidade.md  ADR-0003-dashboard-central.md  ADR-0004-acesso-aos-dados.md  ADR-0005-ecossistema-nyx.md  ADR-0006-memoria.md  ADR-0007-cloud-agora-local-depois.md  ADR-0008-grafo-de-contexto.md  ADR-0009-stack-tecnica-oficial.md  ADR-0010-monorepo-modular.md  ADR-0011-workflow-e-qualidade.md  (+13 more)
infrastructure/: README.md
public/: manifest.json
scripts/: package.py
src/: types.ts
tests/: README.md
(+78 files in other folders)
