[project]
name = "nyx-os"
version = "0.1.0"
requires-python = ">=3.13"
description = "Technical foundation for future Python services in the Nyx OS monorepo."

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
